--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,21 @@
 Package: EasyBioinfo
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Make some common bioinformatic workfolw easier to operate
+Version: 0.0.0.9000
+Authors@R: 
+    person(given = "Wu",
+           family = "Tao",
+           role = c("aut", "cre"),
+           email = "tao1997wu@gmail.com",
+           comment = c(ORCID = "https://orcid.org/0000-0002-8999-9628"))
+Maintainer: Tao Wu <tao1997wu@gmail.com>
+Description: When do bioinformatic data analysis, there are usually many dupliated code of some common workflow. This package contains
+    some wrapper functions to make easier and clear analysis workflow.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+Depends: 
+    R (>= 2.10)
+RoxygenNote: 7.1.1
+Imports: 
+    DESeq2
